[tool.poetry]
name = "griptapedemo"
version = "0.1.0"
description = ""
authors = ["Brian Hudson <reallybrianhudson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
griptape = "*"
griptape-tools = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
